<resources>
    <string name="app_name">Storio</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>

    <string name="name_edit_text_hint">Name</string>
    <string name="email_edit_text_hint">Email</string>
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Register</string>
    <string name="logout_button_text">Logout</string>

    <string name="register_hint">Don\'t have an account?</string>
    <string name="login_hint">Already have an account?</string>
    <string name="add_story_description_hint">Description</string>
    <string name="add_story_location_hint">Include Location</string>

    <string name="add_button_text">Add Story</string>
    <string name="gallery_button_text">Gallery</string>
    <string name="camera_button_text">Camera</string>

    <string name="loading_text">Loading…</string>

    <string name="camera_content_desc">Camera</string>
    <string name="switch_content_desc">Switch</string>

    <string name="story_iv_desc">Story Image</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="retry">Try Again</string>
</resources>