<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".ui.activity.login.LoginActivity">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Storio" />

    <EditText
        android:id="@+id/ed_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_edit_text_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/app_name"
        android:autofillHints="emailAddress" />

    <com.dhana.storio.ui.view.PasswordEditText
        android:id="@+id/ed_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ed_login_email"
        />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button_text"
        app:layout_constraintTop_toBottomOf="@id/ed_login_password"
        tools:text="Login"/>

    <TextView
        android:id="@+id/tv_register_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register_hint"
        android:textSize="18sp"
        android:paddingEnd="15dp"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/to_register_button"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/to_register_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register_button_text"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        app:layout_constraintLeft_toRightOf="@id/tv_register_hint"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="Register"/>

</androidx.constraintlayout.widget.ConstraintLayout>