<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.add.AddStoryActivity">

    <ImageView
        android:id="@+id/preview_image_view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_gallery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/gallery_button_text"
        app:layout_constraintTop_toBottomOf="@id/preview_image_view"
        app:layout_constraintRight_toLeftOf="@id/button_camera"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:text="Gallery" />

    <Button
        android:id="@+id/button_camera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/camera_button_text"
        app:layout_constraintTop_toBottomOf="@id/preview_image_view"
        app:layout_constraintLeft_toRightOf="@id/button_gallery"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="Camera" />

    <EditText
        android:id="@+id/ed_add_description"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/button_camera"
        />

    <Button
        android:id="@+id/button_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_button_text"
        app:layout_constraintTop_toBottomOf="@id/ed_add_description"
        tools:text="Add Story" />

</androidx.constraintlayout.widget.ConstraintLayout>